--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,6 +5,10 @@ on:
     types:
       - opened
       - reopened
+  pull_request_target:
+    types:
+      - opened
+      - reopened
 
 jobs:
   main:
