--- a/.github/workflows/feature_action.yml
+++ b/.github/workflows/feature_action.yml
@@ -19,6 +19,10 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+              # ESLint 스타일 테스트
+            - name: Run ESLint
+              run: npm run lint
+
               # TypeScript 컴파일러 타입 오류 검사
             - name: Run TS type check
               run: npm run tsc -- --noEmit
