[Fix] lint: console, 함수・변수명 겹침 버그 수정 (#7)
* docs: GitHub 협업 및 브랜치 관리 정책 문서 추가

* Feat: Basic CI 추가
- 테스트 종류: Lint, Build, TS 타입 오류

* Feat: Auto labeling

* Feat: Auto labering Upstream add

* Fix: Feature workflow lint delete

* Fix: PR #4 Bug fix
- 버그 내용
- no-console
- sonarjs/no-globals-shadowing

* Fix: auto Labeling token fix

* Fix: auto Labeling name change

---------

Co-authored-by: Solmi Park <69065439+Parksolmi@users.noreply.github.com>

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,27 +1,34 @@
 name: Issue PR Labeler
 
 on:
-  pull_request: # or pull_request_target
-    types:
-      - opened
-      - reopened
-  pull_request_target:
-    types:
-      - opened
-      - reopened
+    pull_request: # or pull_request_target
+        types:
+            - opened
+            - reopened
+    pull_request_target:
+        types:
+            - opened
+            - reopened
 
 jobs:
-  main:
-    runs-on: ubuntu-latest
+    Auto_labeling:
+        runs-on: ubuntu-latest
 
-    permissions:
-      contents: read # 위에 작성한 설정 파일을 읽기 위해 필요
-      pull-requests: write # PR에 라벨을 추가하기 위해 필요
+        permissions:
+            contents: read # 위에 작성한 설정 파일을 읽기 위해 필요
+            pull-requests: write # PR에 라벨을 추가하기 위해 필요
+            issues: write
 
-    steps:
-      - name: Run Issue PR Labeler
-        uses: hoho4190/issue-pr-labeler@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          disable-bot: true
-          config-file-name: labeler-config.yml
+        steps:
+            - name: Check out Code
+              uses: actions/checkout@v4
+              with:
+                  repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
+                  ref: ${{ github.event.pull_request.head.ref || github.ref }}
+
+            - name: Run Issue PR Labeler
+              uses: hoho4190/issue-pr-labeler@v2
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  disable-bot: true
+                  config-file-name: labeler-config.yml
