--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,58 +1,52 @@
-name: Test Issue PR Labeler
+name: Issue PR Labeler
 
 on:
     pull_request:
-        types: [opened, reopened]
+        types:
+            - opened
+            - reopened
     pull_request_target:
-        types: [opened, reopened]
-
-env:
-    ACTIONS_RUNNER_DEBUG: true # Runner-level 디버그
-    ACTIONS_STEP_DEBUG: true # Step-level 디버그
-
-permissions:
-    contents: read # 설정 파일 읽기 권한
-    issues: write # 레이블 추가 권한
+        types:
+            - opened
+            - reopened
 
 jobs:
-    auto_labeling_pr:
-        if: ${{ github.event_name == 'pull_request' }}
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
-
-            - name: Debug pull_request context
-              run: |
-                  echo "=== EVENT ==="
-                  echo "${{ toJson(github.event) }}"
-                  echo "=== CONFIG FILE ==="
-                  cat labeler-config.yml || echo "(config-path 파일이 없습니다)"
-
-            - name: Label PR (pull_request)
-              uses: hoho4190/issue-pr-labeler@v2
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  disable-bot: true
-                  config-file-name: labeler-config.yml
-
-    auto_labeling_pr_target:
+    Auto_labeling_pr_target:
         if: ${{ github.event_name == 'pull_request_target' }}
         runs-on: ubuntu-latest
+
+        permissions:
+            contents: read
+            pull-requests: write
+            issues: write
+
         steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
-
-            - name: Debug pull_request_target context
-              run: |
-                  echo "=== EVENT ==="
-                  echo "${{ toJson(github.event) }}"
-                  echo "=== CONFIG FILE ==="
-                  cat labeler-config.yml || echo "(config-path 파일이 없습니다)"
-
-            - name: Label PR (pull_request_target)
+            - name: Run Issue PR Labeler
               uses: hoho4190/issue-pr-labeler@v2
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
                   disable-bot: true
                   config-file-name: labeler-config.yml
+
+            - run: |
+                  echo "  action:        ${{ github.event.action }}"
+
+    Auto_labeling_pr:
+        if: ${{ github.event_name == 'pull_request' }}
+        runs-on: ubuntu-latest
+
+        permissions:
+            contents: read
+            pull-requests: write
+            issues: write
+
+        steps:
+            - name: Run Issue PR Labeler
+              uses: hoho4190/issue-pr-labeler@v2
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  disable-bot: true
+                  config-file-name: labeler-config.yml
+
+            - run: |
+                  echo "  action:        ${{ github.event.action }}"
