[Bug] PR 권한 문제 해결 및 테스팅 완료 (#25)
* docs: GitHub 협업 및 브랜치 관리 정책 문서 추가

* Feat: Basic CI 추가
- 테스트 종류: Lint, Build, TS 타입 오류

* Feat: Auto labeling

* Feat: Auto labering Upstream add

* Fix: Feature workflow lint delete

* Fix: PR #4 Bug fix
- 버그 내용
- no-console
- sonarjs/no-globals-shadowing

* Fix: auto Labeling token fix

* Fix: auto Labeling name change

* Fix: auto Labeling repo checking

* Fix: Auto Label nameing

* Rename: autoLabel uses 레포지토리 수정

* fix: autolabel permissons add

* Fix: 이벤트 트리거 분리

* Fix: uses 레포지토리 버전 변경

* Fix: uses 레포지토리 버전 변경(PR)

* Test: action flow log testing

* Test: action flow log testing 2

* Test: action flow log testing 3

* Test: label workflow

* Test: workflow console

* Fix: auto label testing Error 버그

* Fix: Auto Label

---------

Co-authored-by: Solmi Park <69065439+Parksolmi@users.noreply.github.com>

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,10 +1,6 @@
 name: Issue PR Labeler
 
 on:
-    pull_request: # or pull_request_target
-        types:
-            - opened
-            - reopened
     pull_request_target:
         types:
             - opened
@@ -15,8 +11,8 @@ jobs:
         runs-on: ubuntu-latest
 
         permissions:
-            contents: read # 위에 작성한 설정 파일을 읽기 위해 필요
-            pull-requests: write # PR에 라벨을 추가하기 위해 필요
+            contents: read
+            pull-requests: write
             issues: write
 
         steps:
@@ -26,3 +22,10 @@ jobs:
                   token: ${{ secrets.GITHUB_TOKEN }}
                   disable-bot: true
                   config-file-name: labeler-config.yml
+
+            - name: 'Debug: 직접 레이블 추가 시도해보기'
+
+              shell: bash
+              run: |
+                  PR_NUM=${{ github.event.pull_request.number }}
+                  REPO=${{ github.repository }}
