--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "next": "15.3.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "rehype-react": "^8.0.0",
+        "remark-gfm": "^4.0.1",
+        "remark-parse": "^11.0.0",
+        "remark-rehype": "^11.1.2",
+        "unified": "^11.0.5",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
