--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "next": "15.3.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-intersection-observer": "^9.16.0",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
