--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "tsc": "tsc"
     },
     "dependencies": {
+        "@tiptap/extension-text-align": "^2.25.0",
+        "@tiptap/extension-underline": "^2.25.0",
+        "@tiptap/pm": "^2.25.0",
+        "@tiptap/react": "^2.25.0",
+        "@tiptap/starter-kit": "^2.25.0",
         "motion": "^12.23.0",
         "next": "15.3.4",
         "react": "^19.0.0",
