--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
         "tsc": "tsc"
     },
     "dependencies": {
+        "@tiptap/extension-character-count": "^2.25.0",
+        "@tiptap/extension-placeholder": "^2.25.0",
+        "@tiptap/extension-text-align": "^2.25.0",
+        "@tiptap/extension-underline": "^2.25.0",
+        "@tiptap/pm": "^2.25.0",
+        "@tiptap/react": "^2.25.0",
+        "@tiptap/starter-kit": "^2.25.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "motion": "^12.23.0",
@@ -25,6 +32,7 @@
         "@naverpay/eslint-config": "^2.3.0",
         "@naverpay/prettier-config": "^1.0.1",
         "@tailwindcss/postcss": "^4",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
