Feat: 목표 및 할일 api 연동 후 무한스크롤 기능 추가

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tiptap/starter-kit": "^2.25.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.23.1",
         "motion": "^12.23.0",
         "next": "15.3.4",
         "react": "^19.0.0",
