--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@naverpay/prettier-config": "^1.0.1",
         "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.16",
+        "@tanstack/eslint-plugin-query": "^5.81.2",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
