--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "tsc": "tsc"
     },
     "dependencies": {
+        "@svgr/webpack": "^8.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "motion": "^12.23.0",
