--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.16",
         "@tanstack/eslint-plugin-query": "^5.81.2",
+        "@tanstack/react-query-devtools": "^5.82.0",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
