--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-    "name": "slideto-do",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "tsc": "tsc"
-    },
-    "dependencies": {
-        "@tanstack/react-query": "^5.83.0",
-        "@tiptap/extension-character-count": "^2.25.0",
-        "@tiptap/extension-placeholder": "^2.25.0",
-        "@tiptap/extension-text-align": "^2.25.0",
-        "@tiptap/extension-underline": "^2.25.0",
-        "@tiptap/pm": "^2.25.0",
-        "@tiptap/react": "^2.25.0",
-        "@tiptap/starter-kit": "^2.25.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "framer-motion": "^12.23.1",
-        "motion": "^12.23.0",
-        "next": "15.3.4",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-intersection-observer": "^9.16.0",
-        "tailwind-merge": "^3.3.1",
-        "zustand": "^5.0.6"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@naverpay/eslint-config": "^2.3.0",
-        "@naverpay/prettier-config": "^1.0.1",
-        "@tailwindcss/postcss": "^4",
-        "@tailwindcss/typography": "^0.5.16",
-        "@tanstack/eslint-plugin-query": "^5.81.2",
-        "@tanstack/react-query-devtools": "^5.82.0",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
-        "eslint-config-next": "15.3.4",
-        "prettier": "^3.6.2",
-        "tailwindcss": "^4",
-        "typescript": "^5"
-    },
-    "prettier": "@naverpay/prettier-config"
+  "name": "slideto-do",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "tsc": "tsc"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
+    "@tiptap/extension-character-count": "^2.25.0",
+    "@tiptap/extension-placeholder": "^2.25.0",
+    "@tiptap/extension-text-align": "^2.25.0",
+    "@tiptap/extension-underline": "^2.25.0",
+    "@tiptap/pm": "^2.25.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
+    "@svgr/webpack": "^8.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.1",
+    "motion": "^12.23.0",
+    "next": "15.3.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@naverpay/eslint-config": "^2.3.0",
+    "@naverpay/prettier-config": "^1.0.1",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.82.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.4",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  },
+  "prettier": "@naverpay/prettier-config"
 }
