[Feature] 회원가입, 로그인 페이지 (#57)
* feat: @alias 사용을 위한 baseUrl 추가

* feat: form 공통 컴포넌트 구현

* feat: 공통 input 스타일에 비밀번호 보이기 버튼 추가

* feat: 로그인 페이지 구현

* feat: 회원가입 페이지 구현

* fix: InputForm 공통 컴포넌트 구현

* feat: react-hook-form으로 form 데이터 유효성 검사 적용

* feat: 로그인, 회원가입 api 연동

* chore: eslint 에러 해결

* chore: eslint 타입 에러 해결

* chore: Eslint 버그 해결

* chore: type error 해결

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.83.0",
     "@tiptap/extension-character-count": "^2.25.0",
     "@tiptap/extension-placeholder": "^2.25.0",
@@ -18,7 +19,6 @@
     "@tiptap/pm": "^2.25.0",
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
-    "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.1",
@@ -26,6 +26,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
