--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "tsc": "tsc"
     },
     "dependencies": {
+        "@svgr/webpack": "^8.1.0",
         "@tanstack/react-query": "^5.83.0",
         "@tiptap/extension-character-count": "^2.25.0",
         "@tiptap/extension-placeholder": "^2.25.0",
@@ -25,6 +26,7 @@
         "next": "15.3.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.60.0",
         "react-intersection-observer": "^9.16.0",
         "tailwind-merge": "^3.3.1",
         "zustand": "^5.0.6"
@@ -33,7 +35,6 @@
         "@eslint/eslintrc": "^3",
         "@naverpay/eslint-config": "^2.3.0",
         "@naverpay/prettier-config": "^1.0.1",
-        "@svgr/webpack": "^8.1.0",
         "@tailwindcss/postcss": "^4",
         "@tailwindcss/typography": "^0.5.16",
         "@tanstack/eslint-plugin-query": "^5.81.2",
