--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
