[Feature] api 공통함수 axios 적용

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tiptap/pm": "^2.25.0",
         "@tiptap/react": "^2.25.0",
         "@tiptap/starter-kit": "^2.25.0",
+        "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.1",
