--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dependencies": {
         "@svgr/webpack": "^8.1.0",
         "@tanstack/react-query": "^5.83.0",
+        "@tiptap/core": "^2.26.1",
         "@tiptap/extension-character-count": "^2.25.0",
+        "@tiptap/extension-link": "^2.26.1",
         "@tiptap/extension-placeholder": "^2.25.0",
         "@tiptap/extension-text-align": "^2.25.0",
         "@tiptap/extension-underline": "^2.25.0",
