--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.60.0",
         "react-intersection-observer": "^9.16.0",
+        "react-toastify": "^11.0.5",
         "tailwind-merge": "^3.3.1",
         "zustand": "^5.0.6"
     },
