--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
         "tsc": "tsc"
     },
     "dependencies": {
@@ -43,13 +46,21 @@
         "@tailwindcss/typography": "^0.5.16",
         "@tanstack/eslint-plugin-query": "^5.81.2",
         "@tanstack/react-query-devtools": "^5.82.0",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.6.4",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^30.0.0",
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "^19.1.9",
+        "@types/react-dom": "^19.1.7",
         "eslint": "^9",
         "eslint-config-next": "15.3.4",
+        "jest": "^30.0.5",
+        "jest-environment-jsdom": "^30.0.5",
         "prettier": "^3.6.2",
         "tailwindcss": "^4",
+        "ts-jest": "^29.4.0",
+        "ts-node": "^10.9.2",
         "typescript": "^5"
     },
     "prettier": "@naverpay/prettier-config"
