--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@svgr/webpack": "^8.1.0",
         "@tanstack/react-query": "^5.83.0",
+        "@testing-library/user-event": "^14.6.1",
         "@tiptap/core": "^2.26.1",
         "@tiptap/extension-character-count": "^2.25.0",
         "@tiptap/extension-link": "^2.26.1",
